revert to last update

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -3,9 +3,8 @@
   "foldHeading": true,
   "useTab": false,
   "showInlineTitle": false,
-  "useMarkdownLinks": true,
+  "useMarkdownLinks": false,
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "./attachments",
-  "showUnsupportedFiles": true,
-  "newLinkFormat": "relative"
+  "showUnsupportedFiles": true
 }
